# taco-api

./: README.md  manage.py  pyproject.toml
taco/: admin.py  apps.py  models.py
taco/migrations/: 0001_initial.py  0002_auto_20210227_1527.py
taco_api/: asgi.py  urls.py  wsgi.py
