[tool.poetry]
name = "taco-api"
version = "0.1.0"
description = ""
authors = ["victorhausen <hausen.victor@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9.1"
Django = "^3.1.7"
django-restframework = "^0.0.1"
djangorestframework = "^3.12.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
